add ci_layout generator

--- a/README
+++ b/README
@@ -32,8 +32,8 @@ Enjoy it!
 TODO List
 =================
 
-* make the CodeigniterVender to a gem.
-* more code generator for Codeigniter development.
+* make the CodeigniterVender into a gem.
+* more code generators for Codeigniter development.
 * test!!!
 
 
