edit README file

--- a/README
+++ b/README
@@ -2,6 +2,7 @@ CodeigniterVender
 =================
 
 This is for ruby fans who also love php. I love CodeIgniter, a php framework.
+It is a set of php-code generators.
 
 http://codeigniter.com/
 
@@ -9,10 +10,12 @@ The current CodeIgniter version is 1.7.2
 
 Example
 =======
-
+in your rails application:
 ruby script/generate ci_app
 
 ruby script/generate ci_controller blog hot old
+ 
+The above commands will generate php code into public directory
 
 How to start?
 =============
@@ -21,8 +24,8 @@ First of all, you should have a ruby on rails environment.
 
 Then create a rails project: rails -d mysql blog
 
-After installed CodeigniterVender plugin, you can execute ruby script/generate ci_app in your RAILS_ROOT path
-this will give you a total Codeigniter context.
+After installed CodeigniterVender gem, you can execute ruby script/generate ci_app in your RAILS_ROOT path
+this will give you a total Codeigniter context in RAILS_ROOT/public.
 Then use command like this (ruby script/generate ci_controller blog hot old) to generate Codeigniter controller and views.
 
 Enjoy it!
@@ -32,7 +35,6 @@ Enjoy it!
 TODO List
 =================
 
-* make the CodeigniterVender into a gem.
 * more code generators for Codeigniter development.
 * test!!!
 
